Задание 41: В Fill2TestDrive вместо Coffee используются классы иерархии typeinfo/pets